# blog

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  katex.min.js  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt  tasks.py
.github/workflows/: main.yml
content/: Offering.md  about.md  ai.bib  bibliography.bib  enabling.md  impressum.md  playing.md  til.bib  working.md
content/Theater/: RPG und Impro.md  future-telling.md  improv-4-business.md  improv23review.md  letsgetphysical.md  piratesninjarobot.md  tension.md  text-lernen.md  theatre.md
content/ai/: AIED.md  cnn.md  few-shot.md  inpainting.md  nlp4assessment.md  nlp4code.md  nn-safety.md  prompting.md  rag.md  self-attention.md
content/life/: future-telling.md  improv23review.md  more-guidance.md  new-masculinity.md  piratesninjarobot.md  reading-52-books.md  storytelling.md  strawphonation.md  tension.md  theatre.md
content/pages/: about.md  enabling.md  impressum.md  offering.md  playing.md  working.md
content/random/: inspiration.md  kreativesschreiben.md  textwerkstatt.md
content/static/: robots.txt
content/tips/: mediawikiemail.md  repairhfs.md
content/university/: University of the Future.md  aiss.md  eduscrum.md  ml2.md  neuronal nets.md  secrets.md  university-of-the-future.md
content/weekly/: 21_30_TIL.md  21_31_TIL.md  21_33_TIL.md  21_34_TIL.md  21_39_TIL.md  21_40_TIL.md  21_41_TIL.md  21_43_TIL.md  22_08_TIL.md
content/write up/: clean-code.md  digital-qualification.md  eduscrum.md  faster.md  function-annotation.md  hpmore.md  improv-4-business.md  letsgetphysical.md  mediawiki-voting.md  nlp.md  pelican.md  schoeffen.md  text-lernen.md  uff.md
plugins/: link_graph.py  minify_output.py
theme/: README.md
theme/templates/: 404.html  article.html  base.html  graph.js  index.html  katex.min.css  page.html  pygment.css  pygment.min.css  style.css  style.min.css
